<resources>
    <string name="app_name">Share it!</string>
    <string name="loginApiEntry">log in</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Password forgotted</string>
    <string name="logo_text">Share it!</string>
    <string name="errorUsername">Wrong username/password</string>
    <string name="errorPassword">Wrong password</string>
    <string name="noInternetAvailable">No Internet available. Please check your internet connection</string>
    <string name="error">An error ocurred</string>
    <string name="loginCorrect">Logged</string>
    <string name="text_separator">|</string>
    <string name="default_font">casual</string>
    <string name="personal_info">Personal Information</string>
    <string name="name">Name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="repitPassword">Repit password</string>
    <string name="navigation_info">Navigation information</string>
    <string name="security_info">Security information</string>
    <string name="loading">Loading…</string>
    <string name="answer1">Answer</string>
    <string name="answer2">Optional answer</string>
    <string name="birthday">Birthday</string>
    <string name="take_from_camera">Take it from camera</string>
    <string name="take_from_gallery">Take it from gallery</string>
    <string name="question_avatar">Are you sure?</string>
    <string name="error_name">Enter your name</string>
    <string name="error_email">Enter your email</string>
    <string name="error_last_name">Enter your last name</string>
    <string name="error_date_not_take">Pick your birthday</string>
    <string name="error_photo_not_taken">Pick any photo/avatar</string>
    <string name="error_username">Enter your username</string>
    <string name="error_password">Enter your password</string>
    <string name="error_password2">Repit your password</string>
    <string name="error_password_coincidence">Passwords do not match</string>
    <string name="error_answer">Enter your answer</string>
    <string name="account_created">Acount created!</string>
    <string name="error_registration">Registration failed</string>
    <string name="password_recover_password">To recover your password insert your email please</string>
    <string name="enter_email">Enter your email</string>
    <string name="password_send">Submit</string>
    <string name="password_request_questions">Answer the question you selected when you created your account</string>
    <string name="password_first_asnwer">Enter first answer</string>
    <string name="password_second_asnwer">Enter second answer</string>
    <string name="update_passwords">Enter your new password to finalize</string>
    <string name="correct_email">Correct email</string>
    <string name="correct_answers">Correct answers</string>
    <string name="failed_asnwers">Incorrect answers</string>
    <string name="password_changed">Password updated!</string>
    <string name="password_not_changed">Password not updated</string>
    <string name="failed_email">Email not registered, you can sign up quickly!</string>
    <string name="empty_email">Please enter any email</string>
    <string name="empty_username">Enter your username</string>
    <string name="empty_pasword">Enter your password</string>
    <string name="empty_username_password">Enter username/password</string>
    <string name="edit">Edit</string>
    <string name="logout">Log out</string>
    <string name="text_large">Cada vez que escribo una entrada en este blog mis compañeros de estudio
        se burlan un poco. Dicen que sufro de incontinencia, que no manejo adecuadamente los códigos
        de un blog, que me extiendo demasiado.</string>
    <string name="posts">Posts</string>
    <string name="default_likes">155</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="description">Description</string>
    <string name="email_registred">An account with this email exist already!</string>
    <string name="social_info">Social Information</string>
    <string name="facebook_username">Username on Facebook</string>
    <string name="twitter_username">Username on Twitter</string>
    <string name="instagram_username">Username on Instagram</string>
    <string name="whatsapp_so">WhatsApp</string>
    <string name="twitter_so">Twitter</string>
    <string name="facebook_so">Facebook</string>
    <string name="email_so">Email</string>
    <string name="website_so">Website</string>
    <string name="instagram_so">Instagram</string>
    <string name="website">Website</string>
    <string name="social_settings">Social Settings</string>
    <string name="privacity">Privacity</string>
    <string name="facebook_empty">If you want public your Facebook, insert your facebook username</string>
    <string name="whatsapp_empty">If you want public your WhatsApp, insert any number</string>
    <string name="instagram_empty">If you want public your Instagram, insert your instagram username</string>
    <string name="twitter_empty">If you want public your Twitter, insert your twitter username</string>
    <string name="website_empty">If you want public your Website, insert your website</string>
    <string name="email_empty">If you want public your email, insert your email</string>
    <string name="name_empty">Name can not be empty</string>
    <string name="lastname_empty">Last name can not be empty</string>
    <string name="demail_empty">Email can not be empty</string>
    <string name="username_empty">Username can not be empty</string>
    <string name="description_empty">Description can not be empty</string>
    <string name="open_facebook">Open Facebook\'s page</string>
    <string name="open_instagram">Open Instagram\'s page</string>
    <string name="open_website">Open Website</string>
    <string name="open_twitter">Open Twitter\'s page</string>
    <string name="open_email">Write an email</string>
    <string name="open_whatsapp">Send a message</string>
    <string name="go">Go</string>
    <string name="send">Send</string>
    <string name="facebook">Facebook</string>
    <string name="picture">Picture</string>
    <string name="comments">Comments</string>
    <string name="write_comment">Write a comment</string>
    <string name="likes">Likes</string>
    <string name="likes_title">People who liked this</string>
    <string name="random_name">Joan Manuel Serrat</string>
    <string name="commento_couldnt_send">Could not send comment, try it later</string>
    <string name="drop_comment">DROP COMMENT</string>
    <string name="error_drop_comment">Could not drop comment, try it later!</string>
    <string name="error_update_comments">Could not update comments, check your internet connection</string>
    <string name="saved_pictures">Saved pictures</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_photo">Create a new Photo</string>
    <string name="insert_any_photo_s_description">Insert any photo\'s description</string>
    <string name="upload_failure">Something went wrong</string>
    <string name="upload_picture">Upload picture</string>
    <string name="unfollow">unfollow</string>
    <string name="follow">follow</string>
    <string name="write_any_message">Write any message</string>
    <string name="error_ocurred">An error ocurred</string>
    <string name="select_one_contact">Select one contact: </string>
    <string name="empty_feed">You are not following anyone</string>
    <string name="empty_notifications">Start a new conversation!</string>
    <string name="empty_fee_search">Click here to search people!</string>
    <string name="empty_photos">There is no photo added!</string>
    <string name="empty_saved_photos">There is no photo saved!</string>
    <string name="first_message">Hey! Be the first sending a message!</string>
    <string name="first_comment">Hey! Be the first sending a comment!</string>
    <string name="start_finding_people">Start finding people!</string>
    <string name="not_user_found">Not user found with that username</string>
    <string name="ok">Ok</string>
    <string name="empty_descrpition">Please introduce any description</string>
    <string name="no_avatar_available">There is not any avatar available right now</string>
</resources>
