<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity="com.albaradocompany.jose.proyect_meme_clean.ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/login_face"
        android:src="@color/color_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fo2"
        android:alpha="0.3" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="@dimen/default_with"
        android:layout_height="@dimen/default_height"
        android:layout_below="@+id/login_text_logo"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/user"
        android:fontFamily="@string/default_font"
        android:gravity="center"
        android:hint="@string/username"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="@dimen/default_with"
        android:layout_height="@dimen/default_height"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/password"
        android:fontFamily="@string/default_font"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="@dimen/text_size"
        android:layout_below="@id/login_username"
        android:layout_alignStart="@+id/login_separator3" />

    <Button
        android:id="@+id/login_b_signin"
        android:textColor="@android:color/white"
        android:text="@string/sign_in"
        android:background="@color/color_buttons"
        android:layout_width="@dimen/default_with"
        android:layout_height="wrap_content"
        android:fontFamily="@string/default_font"
        android:layout_above="@+id/login_b_signup"
        android:layout_alignEnd="@+id/login_password" />

    <TextView
        android:id="@+id/login_b_signup"
        android:text="@string/sign_up"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_color"
        android:fontFamily="@string/default_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_alignEnd="@+id/login_b_signin"
        android:layout_alignBottom="@+id/login_fPassword" />

    <TextView
        android:id="@+id/login_text_separator"
        android:textSize="@dimen/text_size"
        android:text="@string/text_separator"
        android:textColor="@color/text_color"
        android:fontFamily="@string/default_font"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/login_fPassword"
        android:layout_marginLeft="40sp"
        android:layout_marginBottom="@dimen/default_margin_x2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_fPassword"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/default_margin_x2"
        android:textColor="@color/text_color"
        android:text="@string/password"
        android:fontFamily="@string/default_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/login_password" />

    <ImageView
        android:id="@+id/login_separator1"
        android:layout_width="@dimen/default_with"
        android:layout_height="0.4dp"
        android:background="@color/text_color"
        android:layout_above="@id/login_username"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/login_separator2"
        android:layout_width="@dimen/default_with"
        android:layout_height="0.4dp"
        android:background="@color/text_color"
        android:layout_above="@id/login_password"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/login_separator3"
        android:layout_width="@dimen/default_with"
        android:layout_height="0.4dp"
        android:background="@color/text_color"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginTop="@dimen/default_margin"
        android:src="@mipmap/logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/login_text_logo"
        android:textColor="@color/text_color"
        android:layout_marginTop="10sp"
        android:textSize="@dimen/default_margin"
        android:textStyle="bold"
        android:fontFamily="@string/default_font"
        android:text="@string/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/default_margin_x2" />

    <ProgressBar
        android:id="@+id/login_pbr"
        android:visibility="gone"
        android:background="@drawable/progress"
        android:layout_centerHorizontal="true"
        android:progressDrawable="@color/light_gray"
        android:layout_above="@+id/login_b_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
