<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.albaradocompany.jose.proyect_meme_clean.ui.activity.UploadActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/upload_lyt_container"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/upload_iv_image"
                android:layout_below="@+id/upload_vw"
                android:src="@drawable/fo3"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
            <TextView
                android:id="@+id/upload_tv_description"
                android:layout_below="@+id/upload_iv_image"
                android:text="@string/description"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:textColor="@color/color_login"
                android:fontFamily="@string/default_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/upload_et_description"
                android:layout_below="@+id/upload_tv_description"
                android:hint="@string/insert_any_photo_s_description"
                android:padding="16dp"
                android:background="@drawable/border_text"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@string/default_font"
                android:textSize="@dimen/text_size"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:id="@+id/upload_vw"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"/>
            <ImageButton
                android:id="@+id/upload_ibtn_back"
                android:src="@drawable/back_blue"
                android:padding="8dp"
                android:background="@null"
                android:layout_alignTop="@+id/upload_vw"
                android:layout_alignBottom="@+id/upload_vw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/upload_picture"
                android:layout_alignTop="@+id/upload_vw"
                android:layout_alignBottom="@+id/upload_vw"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:padding="16dp"
                android:textSize="@dimen/text_size_title"
                android:fontFamily="@string/default_font"
                android:textStyle="bold"
                android:textColor="#00A4A9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageButton
                android:id="@+id/upload_ibtn_check"
                android:src="@drawable/check_upload"
                android:padding="8dp"
                android:layout_alignTop="@+id/upload_tv_description"
                android:layout_alignBottom="@+id/upload_tv_description"
                android:background="@drawable/roundedbutton_blue"
                android:layout_alignEnd="@+id/upload_vw"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ProgressBar
                android:id="@+id/upload_pbr"
                android:background="@drawable/progress"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_alignTop="@+id/upload_ibtn_check"
                android:layout_alignBottom="@+id/upload_ibtn_check"
                android:layout_alignEnd="@+id/upload_ibtn_check"
                android:layout_alignStart="@+id/upload_ibtn_check"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
